--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,6 +47,7 @@ jobs:
       - run:
           name: Build front-end
           command: |
+            cd frontend
             npm i
             npm run build
       - save_cache:
@@ -63,6 +64,7 @@ jobs:
       - run:
           name: Back-end build
           command: |
+            cd backend
             npm i
             npm run build
       - save_cache:
@@ -76,8 +78,12 @@ jobs:
       - checkout
       - restore_cache:
           keys: [frontend-build]
-      - run: npm run test
-                
+      - run: 
+          name: frontend-test
+          command: |
+              cd frontend
+              npm run test
+
   test-backend:
     docker:
       - image: circleci/node:13.8.0
@@ -85,7 +91,11 @@ jobs:
       - checkout
       - restore_cache:
           keys: [backend-build]
-      - run: npm run test
+      - run:
+          name: backend-test
+          command: |
+              cd backend
+              npm run test
             
   scan-frontend:
     docker:
@@ -94,7 +104,11 @@ jobs:
       - checkout
       - restore_cache:
           keys: [frontend-build]
-      - run: npm audit --audit-level=critical
+      - run:
+          name: frontend-scan
+          command: |
+              cd frontend
+              npm audit --audit-level=critical --force
 
   scan-backend:
     docker:
@@ -103,7 +117,11 @@ jobs:
       - checkout
       - restore_cache:
           keys: [backend-build]
-      - run: npm audit --audit-level=critical
+      - run:
+          name: backend-scan
+          command: |
+              cd backend
+              npm audit fix --audit-level=critical --force
 
   deploy-infrastructure:
     docker:
@@ -347,7 +365,7 @@ jobs:
                                         https://api.memstash.io/values/udacity-project-workflow-id)
               export STACKS=($(aws cloudformation list-stacks --query "StackSummaries[*].StackName" \
                               --stack-status-filter CREATE_COMPLETE --no-paginate --output text))
-                
+
               echo Old Workflow Id:${OLD_WORKFLOW_ID}
               echo "New id:${CIRCLE_WORKFLOW_ID:0:7}"
               echo ${STACKS}
