--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,6 +50,7 @@ jobs:
             cd frontend
             npm i
             npm run build
+            npm i --save-dev oauth-sign html-loader@2.1.2 html-webpack-plugin@5.3.1
       - save_cache:
           paths: [frontend/node_modules]
           key: frontend-build
@@ -108,7 +109,7 @@ jobs:
           name: frontend-scan
           command: |
               cd frontend
-              npm install --save-dev html-loader@2.1.2
+              npm audit fix --force
               npm audit --audit-level=critical --force
 
   scan-backend:
