--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -180,8 +180,8 @@ jobs:
           paths:
             - project/.circleci/ansible/inventory.txt
             - project/backend/.env
-      #- destroy-environment:
-      #    workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+      - destroy-environment:
+          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
 
   configure-infrastructure:
     docker:
