--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -132,6 +132,10 @@ jobs:
     steps:
       - checkout
       - run:
+          name: Install tar
+          command: |
+            yum -y install tar gzip
+      - run:
           name: Ensure back-end infrastructure exists
           command: |
             echo $AWS_DEFAULT_REGION
