--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -222,6 +222,7 @@ jobs:
           command: |
             cd backend
             cat .env
+            npm i typescript -g
             npm run migrations >> migration_output.txt
             cat migration_output.txt
       - run:
