--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -229,12 +229,13 @@ jobs:
           name: Send migration results to memstash
           command: |
             cd backend
-            if grep -q "success" migrations.txt then
+            if grep -q "success" migrations.txt
+            then
               curl -H "Content-Type: text/plain" -H "token: 0bd51f2c-bf46-41af-9e88-5f11084ce239" \
                 --request PUT \
                 --data '1' \
                 https://api.memstash.io/values/udacity-project-migrations
-            else
+            else \
               curl -H "Content-Type: text/plain" -H "token: 0bd51f2c-bf46-41af-9e88-5f11084ce239" \
                 --request PUT \
                 --data '0' \
