--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -344,7 +344,7 @@ jobs:
       - run:
           name: Update cloudfront distribution
           command: |
-            export OLD_WORKFLOW_ID=$(aws cloudformation list-exports --query "Exports[?Name==\`WorkflowID\`].Value" --no-paginate --output text)
+            export OLD_WORKFLOW_ID=$(aws cloudformation list-exports --query "Exports[?Name=='WorkflowID'].Value" --no-paginate --output text)
 
             export STACKS=($(aws cloudformation list-stacks --query "StackSummaries[*].StackName" --stack-status-filter CREATE_COMPLETE --no-paginate --output text))
 
@@ -373,10 +373,9 @@ jobs:
         - run:
             name: Remove old stacks and files
             command: |
-              export OLD_WORKFLOW_ID=$(curl -H "token: 0bd51f2c-bf46-41af-9e88-5f11084ce239" --request GET \
-                                        https://api.memstash.io/values/udacity-project-workflow-id)
-              export STACKS=($(aws cloudformation list-stacks --query "StackSummaries[*].StackName" \
-                              --stack-status-filter CREATE_COMPLETE --no-paginate --output text))
+              export OLD_WORKFLOW_ID=$(curl -H "token: 0bd51f2c-bf46-41af-9e88-5f11084ce239" --request GET https://api.memstash.io/values/udacity-project-workflow-id)
+              export STACKS=$(aws cloudformation list-stacks --query "StackSummaries[*].StackName" \
+                --stack-status-filter CREATE_COMPLETE --no-paginate --output text)
 
               echo Old Workflow Id:${OLD_WORKFLOW_ID}
               echo "New id:${CIRCLE_WORKFLOW_ID:0:7}"
