--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -293,6 +293,10 @@ jobs:
       - run:
           name: Deploy backend
           command: |
+            EC2_PUBGLIC_URL=`aws ec2 describe-instances \
+                --query 'Reservations[*].Instances[*].PublicIpAddress' \
+                --output text` && \
+            echo $EC2_PUBGLIC_URL >> ~/.ssh/known_hosts \
             tar -C backend -czvf backend_artifact.tar.gz . && \
             cd .circleci/ansible && \
             ansible-playbook -i inventory.txt deploy-backend.yml
