--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -347,6 +347,8 @@ jobs:
             export OLD_WORKFLOW_ID=$(aws cloudformation list-exports \
             --query "Exports[?Name=='WorkflowID'].Value" --no-paginate --output text)
 
+            echo OLD_WORKFLOW_ID: ${OLD_WORKFLOW_ID}
+            
             curl -H "Content-Type: text/plain" -H "token: 0bd51f2c-bf46-41af-9e88-5f11084ce239" \
             --request PUT --data "$OLD_WORKFLOW_ID" https://api.memstash.io/values/udacity-project-workflow-id
       - run:
@@ -376,7 +378,7 @@ jobs:
 
               echo OLD_WORKFLOW_ID: ${OLD_WORKFLOW_ID}
               echo Current_WORKFLOW_ID: ${CIRCLE_WORKFLOW_ID:0:7}
-              
+
               echo ${STACKS}
               aws s3 rm s3://udapeople-${OLD_WORKFLOW_ID} --recursive
               aws cloudformation delete-stack --stack-name backend-${OLD_WORKFLOW_ID}
