--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -341,11 +341,17 @@ jobs:
       - image: amazon/aws-cli
     steps:
       - checkout
-      #- run:
-      #    name: Knowing Old Workflow ID
-      #    command: |
       - run:
           name: Update cloudfront distribution
+          command: |
+            aws cloudformation deploy \
+              --template-file .circleci/files/cloudfront.yml \
+              --stack-name udapeople-${CIRCLE_WORKFLOW_ID:0:7} \
+              --region ${AWS_DEFAULT_REGION} \
+              --parameter-overrides WorkflowID=${CIRCLE_WORKFLOW_ID:0:7} \
+              --tags project=udapeople
+      - run:
+          name: Knowing Old Workflow ID
           command: |
             export OLD_WORKFLOW_ID=$(aws cloudformation list-exports \
             --query "Exports[?Name=='WorkflowID'].Value" --no-paginate --output text)
@@ -354,13 +360,6 @@ jobs:
 
             curl -H "Content-Type: text/plain" -H "token: 0bd51f2c-bf46-41af-9e88-5f11084ce239" \
             --request PUT --data "$OLD_WORKFLOW_ID" https://api.memstash.io/values/udacity-project-workflow-id
-
-            aws cloudformation deploy \
-              --template-file .circleci/files/cloudfront.yml \
-              --stack-name udapeople-${CIRCLE_WORKFLOW_ID:0:7} \
-              --region ${AWS_DEFAULT_REGION} \
-              --parameter-overrides WorkflowID=${CIRCLE_WORKFLOW_ID:0:7} \
-              --tags project=udapeople
       - destroy-environment:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
       - revert-migrations 
