--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,8 @@
 version: 2.1
 
+orbs:
+  slack: circleci/slack@4.4.2
+
 parameters:
   workflow-id:
     type: string
@@ -85,6 +88,13 @@ jobs:
               cd frontend
               npm i --save-dev oauth-sign
               npm run test
+      - slack/notify:
+          event: fail
+          mentions: '@DevOps'
+          template: basic_fail_1
+      - slack/notify:
+          event: pass
+          template: success_tagged_deploy_1
 
   test-backend:
     docker:
@@ -98,6 +108,13 @@ jobs:
           command: |
               cd backend
               npm run test
+      - slack/notify:
+          event: fail
+          mentions: '@DevOps'
+          template: basic_fail_1
+      - slack/notify:
+          event: pass
+          template: success_tagged_deploy_1
             
   scan-frontend:
     docker:
@@ -112,6 +129,13 @@ jobs:
               cd frontend
               npm audit fix --force
               npm audit --audit-level=critical --force
+      - slack/notify:
+          event: fail
+          mentions: '@DevOps'
+          template: basic_fail_1
+      - slack/notify:
+          event: pass
+          template: success_tagged_deploy_1
 
   scan-backend:
     docker:
@@ -125,6 +149,13 @@ jobs:
           command: |
               cd backend
               npm audit fix --audit-level=critical --force
+      - slack/notify:
+          event: fail
+          mentions: '@DevOps'
+          template: basic_fail_1
+      - slack/notify:
+          event: pass
+          template: success_tagged_deploy_1
 
   deploy-infrastructure:
     docker:
@@ -186,6 +217,13 @@ jobs:
             - project/backend/.env
       - destroy-environment:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+      - slack/notify:
+          event: fail
+          mentions: '@DevOps'
+          template: basic_fail_1
+      - slack/notify:
+          event: pass
+          template: success_tagged_deploy_1
 
   configure-infrastructure:
     docker:
@@ -209,6 +247,13 @@ jobs:
             ansible-playbook -i inventory.txt configure-server.yml
       - destroy-environment:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+      - slack/notify:
+          event: fail
+          mentions: '@DevOps'
+          template: basic_fail_1
+      - slack/notify:
+          event: pass
+          template: success_tagged_deploy_1
 
   run-migrations:
     docker:
@@ -244,7 +289,14 @@ jobs:
             echo Key: migrations-${CIRCLE_WORKFLOW_ID:0:7}
       - destroy-environment:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}   
-      - revert-migrations  
+      - revert-migrations
+      - slack/notify:
+          event: fail
+          mentions: '@DevOps'
+          template: basic_fail_1
+      - slack/notify:
+          event: pass
+          template: success_tagged_deploy_1
 
   deploy-frontend:
     docker:
@@ -273,6 +325,13 @@ jobs:
       - destroy-environment:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7} 
       - revert-migrations
+      - slack/notify:
+          event: fail
+          mentions: '@DevOps'
+          template: basic_fail_1
+      - slack/notify:
+          event: pass
+          template: success_tagged_deploy_1
                     
   deploy-backend:
     docker:
@@ -299,6 +358,13 @@ jobs:
       - destroy-environment:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
       - revert-migrations
+      - slack/notify:
+          event: fail
+          mentions: '@DevOps'
+          template: basic_fail_1
+      - slack/notify:
+          event: pass
+          template: success_tagged_deploy_1
 
   smoke-test:
     docker:
@@ -335,6 +401,13 @@ jobs:
       - destroy-environment:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
       - revert-migrations
+      - slack/notify:
+          event: fail
+          mentions: '@DevOps'
+          template: basic_fail_1
+      - slack/notify:
+          event: pass
+          template: success_tagged_deploy_1
 
   cloudfront-update:
     docker:
@@ -362,7 +435,14 @@ jobs:
             --request PUT --data "$OLD_WORKFLOW_ID" https://api.memstash.io/values/udacity-project-workflow-id
       - destroy-environment:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
-      - revert-migrations 
+      - revert-migrations
+      - slack/notify:
+          event: fail
+          mentions: '@DevOps'
+          template: basic_fail_1
+      - slack/notify:
+          event: pass
+          template: success_tagged_deploy_1
 
   cleanup:
       docker:
@@ -383,6 +463,13 @@ jobs:
               aws s3 rm s3://udapeople-${OLD_WORKFLOW_ID} --recursive
               aws cloudformation delete-stack --stack-name backend-${OLD_WORKFLOW_ID}
               aws cloudformation delete-stack --stack-name frontend-${OLD_WORKFLOW_ID}
+      - slack/notify:
+          event: fail
+          mentions: '@DevOps'
+          template: basic_fail_1
+      - slack/notify:
+          event: pass
+          template: success_tagged_deploy_1
 
 workflows:
   default:
@@ -391,28 +478,40 @@ workflows:
       - build-backend
       - test-frontend:
           requires: [build-frontend]
+          context: slack-context
       - test-backend:
           requires: [build-backend]
+          context: slack-context
       - scan-backend:
           requires: [build-backend]
+          context: slack-context
       - scan-frontend:
           requires: [build-frontend]
+          context: slack-context
       - deploy-infrastructure:
           requires: [test-frontend, test-backend, scan-frontend, scan-backend]
+          context: slack-context
           filters:
             branches:
               only: [master]
       - configure-infrastructure:
           requires: [deploy-infrastructure]
+          context: slack-context
       - run-migrations:
           requires: [configure-infrastructure]
+          context: slack-context
       - deploy-frontend:
           requires: [run-migrations]
+          context: slack-context
       - deploy-backend:
           requires: [run-migrations]
+          context: slack-context
       - smoke-test:
           requires: [deploy-backend, deploy-frontend]
+          context: slack-context
       - cloudfront-update:
           requires: [smoke-test]
+          context: slack-context
       - cleanup:
           requires: [cloudfront-update]
+          context: slack-context
