--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -274,7 +274,7 @@ jobs:
             fi
             echo Key: migrations-${CIRCLE_WORKFLOW_ID:0:7}
       - destroy-environment:
-          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}   
+          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
       - revert-migrations
 
   deploy-frontend:
@@ -302,7 +302,7 @@ jobs:
             npm run build && \
             aws s3 cp dist s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
       - destroy-environment:
-          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7} 
+          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
       - revert-migrations
                     
   deploy-backend:
@@ -410,10 +410,12 @@ jobs:
               echo OLD_WORKFLOW_ID: ${OLD_WORKFLOW_ID}
               echo Current_WORKFLOW_ID: ${CIRCLE_WORKFLOW_ID:0:7}
 
-              echo ${STACKS}
-              aws s3 rm s3://udapeople-${OLD_WORKFLOW_ID} --recursive
-              aws cloudformation delete-stack --stack-name backend-${OLD_WORKFLOW_ID}
-              aws cloudformation delete-stack --stack-name frontend-${OLD_WORKFLOW_ID}
+              if [[ "${STACKS[@]}" =~ "${OLD_WORKFLOW_ID}" ]]
+              then
+                aws s3 rm s3://udapeople-${OLD_WORKFLOW_ID} --recursive
+                aws cloudformation delete-stack --stack-name backend-${OLD_WORKFLOW_ID}
+                aws cloudformation delete-stack --stack-name frontend-${OLD_WORKFLOW_ID}
+              fi
 
 workflows:
   default:
