--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -375,10 +375,7 @@ jobs:
       - run:
           name: Knowing Old Workflow ID
           command: |
-            export OLD_WORKFLOW_ID=$(aws cloudformation list-exports \
-            --query "Exports[?Name=='WorkflowID'].Value" --no-paginate --output text)
-
-            echo OLD_WORKFLOW_ID: ${OLD_WORKFLOW_ID}
+            export OLD_WORKFLOW_ID=$(aws cloudformation list-exports --query "Exports[?Name=='WorkflowID'].Value" --no-paginate --output text)
 
             curl -H "Content-Type: text/plain" -H "token: 0bd51f2c-bf46-41af-9e88-5f11084ce239" \
             --request PUT --data "$OLD_WORKFLOW_ID" https://api.memstash.io/values/udacity-project-workflow-id
@@ -404,11 +401,12 @@ jobs:
             name: Remove old stacks
             command: |
               export OLD_WORKFLOW_ID=$(curl -H "token: 0bd51f2c-bf46-41af-9e88-5f11084ce239" --request GET https://api.memstash.io/values/udacity-project-workflow-id)
+              
               export STACKS=$(aws cloudformation list-stacks --query "StackSummaries[*].StackName" \
-                --stack-status-filter CREATE_COMPLETE --no-paginate --output text)
+              --stack-status-filter CREATE_COMPLETE --no-paginate --output text)
 
               echo OLD_WORKFLOW_ID: ${OLD_WORKFLOW_ID}
-              echo OurCurrentWorkFlow: ${STACKS[@]}
+              echo CURRENT_WORKFLOW_ID: ${STACKS[@]}
 
               if [[ "${STACKS[@]}" =~ "${OLD_WORKFLOW_ID}" ]]
               then
